2008-01-19  Paolo Borelli  <pborelli@katamail.com>

	* modulesets/gnome-2.20.modules, modulesets/gnome-2.12.modules:
	add gucharmap to the gedit-plugins deps, so that the charmap plugin
	gets built.

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* modulesets/freedesktop-2.16.modules, modulesets/gnome-2.16.modules:
	recreated a freedesktop-2.16.modules from moduleset published by the
	release team for 2.16.3.  (closes: #388497)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* Makefile.am, doc/Makefile.am: totally ignore the doc/ directory
	unless --enable-doc-installation is passed to configure.
	(closes: #510516)

2008-01-19  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/config.py,
	jhbuild/defaults.jhbuildrc, jhbuild/modtypes/__init__.py,
	jhbuild/moduleset.py, modulesets/moduleset.dtd: implemented a support
	for "tags", modules are automatically tagged with the name of the
	moduleset they are from, and build, update and list commands accept a
	list of tags modules must match to be considered; based on idea and
	patch of Colin Walters.  (closes: #460360)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/rdepends.py, jhbuild/moduleset.py,
	modulesets/hildon.modules: removed obvious cycle dependency of openobex
	on itself; also fixed rdepends to silently ignore cycle dependencies.
	(closes: #510498)

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, tests/tests.py: fixed skip option, as skipped
	modules dependencies were not ignored (and fixed test case that I got
	wrong).

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml: updated documentation to also list build systems
	that are supported, and to add some more consistency in how JHBuild is
	spelt.

2008-01-18  Frederic Peters  <fpeters@0d.be>

	* doc/C/jhbuild.xml, jhbuild/commands/base.py, jhbuild/moduleset.py:
	added --soft-deps and --clusters options to the dot command; the