@@ -1,3 +1,8 @@
+2008-01-19  Frederic Peters  <fpeters@0d.be>
+
+	* tests/mock.py, tests/tests.py: new unit tests covering a bit of build
+	policy and autotools module type adherence to config options.
+
 2008-01-19  Paolo Borelli  <pborelli@katamail.com>
 
 	* modulesets/gnome-2.20.modules, modulesets/gnome-2.12.modules:
